--- a/app/src/index.css
+++ b/app/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+    box-shadow: 0px 0px 3px 0px rgba(66, 68, 90, 1);
+}
