added number to CheckpointObject added post request added noCommit error handling

--- a/app/src/components/student/Checkpoints.css
+++ b/app/src/components/student/Checkpoints.css
@@ -1,7 +1,10 @@
 #progress-checkbox {
-
+    width: 20px;
+    height: 20px;
 }
 
 #progress-checkbox:hover {
+    width: 20px;
+    height: 20px;
     cursor: pointer;
 }
